add authentication system and fix global state security vulnerability...

--- a/packages/agents/agent-ecs/tsconfig.json
+++ b/packages/agents/agent-ecs/tsconfig.json
@@ -9,10 +9,13 @@
     "include": ["src/**/*"],
     "references": [
         {
-            "path": "../ds"
+            "path": "../../ds"
         },
         {
-            "path": "../utils"
+            "path": "../../utils"
+        },
+        {
+            "path": "../../pantheon-ecs"
         }
     ]
 }
