--- a/packages/pantheon-ecs/tsconfig.json
+++ b/packages/pantheon-ecs/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "outDir": "./dist",
     "rootDir": "./src",
-    "noEmitHelpers": true
+    "noEmitHelpers": true,
+    "composite": true
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.ts"]
