--- a/packages/pantheon/package.json
+++ b/packages/pantheon/package.json
@@ -44,9 +44,11 @@
     "@promethean-os/pantheon-mcp": "workspace:*",
     "@promethean-os/pantheon-llm-openai": "workspace:*",
     "commander": "^11.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.0.0",
     "ava": "^5.3.1",
     "typescript": "^5.3.3"
